[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/level_editor/CustomLevelsManager.gd" type="Script" id=1]
[ext_resource path="res://scenes/level_editor/Add.svg" type="Texture" id=2]
[ext_resource path="res://scenes/level_editor/Import.svg" type="Texture" id=3]
[ext_resource path="res://scenes/level_editor/ArrowLeft.svg" type="Texture" id=4]
[ext_resource path="res://scenes/level_editor/RenameFileDialog.gd" type="Script" id=5]
[ext_resource path="res://resources/default_theme.tres" type="Theme" id=6]
[ext_resource path="res://scenes/level_editor/ImportDialog.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="Animation" id=2]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ContextMenu:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}

[node name="CustomLevelsManager" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -377.0
margin_top = -227.0
margin_right = 377.0
margin_bottom = 227.0
theme = ExtResource( 6 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 749.0
margin_bottom = 449.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 744.0
margin_bottom = 444.0
custom_constants/separation = 20

[node name="CustomLevels" type="ItemList" parent="MarginContainer/HBoxContainer"]
margin_right = 744.0
margin_bottom = 444.0
rect_min_size = Vector2( 700, 400 )
size_flags_horizontal = 3
custom_constants/vseparation = 20
custom_constants/hseparation = 40
allow_reselect = true
allow_rmb_select = true
max_columns = 4
same_column_width = true
fixed_column_width = 142
icon_mode = 0
fixed_icon_size = Vector2( 128, 128 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/CustomLevels"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -156.0
margin_top = -72.0
grow_horizontal = 0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewLevel" type="ToolButton" parent="MarginContainer/HBoxContainer/CustomLevels/HBoxContainer"]
margin_right = 64.0
margin_bottom = 72.0
hint_tooltip = "New level"
icon = ExtResource( 2 )
flat = false

[node name="Import" type="ToolButton" parent="MarginContainer/HBoxContainer/CustomLevels/HBoxContainer"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 72.0
hint_tooltip = "Import level"
icon = ExtResource( 3 )
flat = false

[node name="DefaultLevels" type="CheckButton" parent="MarginContainer/HBoxContainer/CustomLevels"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -72.0
margin_right = 94.0
custom_styles/normal = SubResource( 1 )
text = "Default Levels"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContextMenu" type="PopupPanel" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 79.0
margin_bottom = 147.0
rect_scale = Vector2( 1e-05, 1e-05 )

[node name="VBoxContainer" type="VBoxContainer" parent="ContextMenu"]
margin_left = 5.0
margin_top = 5.0
margin_right = 127.0
margin_bottom = 233.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="ContextMenu/VBoxContainer"]
margin_right = 732.0
margin_bottom = 20.0
text = "Play"

[node name="HSeparator" type="HSeparator" parent="ContextMenu/VBoxContainer"]
margin_top = 24.0
margin_right = 732.0
margin_bottom = 28.0

[node name="Edit" type="Button" parent="ContextMenu/VBoxContainer"]
margin_top = 32.0
margin_right = 732.0
margin_bottom = 52.0
text = "Edit"

[node name="Rename" type="Button" parent="ContextMenu/VBoxContainer"]
margin_top = 56.0
margin_right = 732.0
margin_bottom = 76.0
text = "Rename"

[node name="ExportFile" type="Button" parent="ContextMenu/VBoxContainer"]
margin_top = 80.0
margin_right = 732.0
margin_bottom = 100.0
text = "Export File"

[node name="ExportText" type="Button" parent="ContextMenu/VBoxContainer"]
margin_top = 80.0
margin_right = 732.0
margin_bottom = 100.0
text = "Export Text"

[node name="HSeparator2" type="HSeparator" parent="ContextMenu/VBoxContainer"]
margin_top = 104.0
margin_right = 732.0
margin_bottom = 108.0

[node name="Delete" type="Button" parent="ContextMenu/VBoxContainer"]
margin_top = 112.0
margin_right = 732.0
margin_bottom = 132.0
text = "Delete"

[node name="DeleteConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_right = 200.0
margin_bottom = 70.0

[node name="ExportFileDialog" type="FileDialog" parent="."]
margin_right = 400.0
margin_bottom = 300.0
rect_min_size = Vector2( 400, 300 )
popup_exclusive = true
access = 2
filters = PoolStringArray( "*.json" )
current_dir = "/Users/Dardan/code/gameoff-2020"
current_path = "/Users/Dardan/code/gameoff-2020/"

[node name="RenameFileDialog" type="ConfirmationDialog" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 207.0
margin_bottom = 93.0
rect_min_size = Vector2( 200, 100 )
window_title = "Rename Level"
dialog_text = "Rename file"
script = ExtResource( 5 )

[node name="HBoxContainer2" type="VBoxContainer" parent="RenameFileDialog"]
margin_left = 8.0
margin_top = 30.0
margin_right = 192.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="RenameFileDialog/HBoxContainer2"]
margin_right = 184.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="RenameFileDialog/HBoxContainer2"]
margin_top = 28.0
margin_right = 184.0
margin_bottom = 42.0
custom_colors/font_color = Color( 1, 0, 0, 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Back" type="ToolButton" parent="CanvasLayer"]
margin_right = 76.0
margin_bottom = 72.0
hint_tooltip = "Back to TitleScreen"
icon = ExtResource( 4 )
flat = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/open_popup = SubResource( 2 )

[node name="ExportTextDialog" type="WindowDialog" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 749.0
margin_bottom = 449.0
popup_exclusive = true
window_title = "Export as Text"
resizable = true

[node name="VBoxContainer" type="VBoxContainer" parent="ExportTextDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="ExportTextDialog/VBoxContainer"]
margin_right = 744.0
margin_bottom = 408.0
size_flags_horizontal = 3
size_flags_vertical = 3
readonly = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ExportTextDialog/VBoxContainer"]
margin_top = 412.0
margin_right = 744.0
margin_bottom = 444.0
custom_constants/separation = 50
alignment = 1

[node name="CopyToClipboard" type="Button" parent="ExportTextDialog/VBoxContainer/HBoxContainer"]
margin_left = 225.0
margin_right = 397.0
margin_bottom = 32.0
text = "Copy To Clipboard"

[node name="Close" type="Button" parent="ExportTextDialog/VBoxContainer/HBoxContainer"]
margin_left = 447.0
margin_right = 518.0
margin_bottom = 32.0
text = "Close"

[node name="ImportDialog" parent="." instance=ExtResource( 7 )]
[connection signal="item_activated" from="MarginContainer/HBoxContainer/CustomLevels" to="." method="_on_CustomLevels_item_activated"]
[connection signal="item_selected" from="MarginContainer/HBoxContainer/CustomLevels" to="." method="_on_CustomLevels_item_selected"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/CustomLevels/HBoxContainer/NewLevel" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/CustomLevels/HBoxContainer/NewLevel" to="." method="_on_NewLevel_pressed"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/CustomLevels/HBoxContainer/Import" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/CustomLevels/HBoxContainer/Import" to="." method="_on_Import_pressed"]
[connection signal="toggled" from="MarginContainer/HBoxContainer/CustomLevels/DefaultLevels" to="." method="_on_DefaultLevels_toggled"]
[connection signal="about_to_show" from="ContextMenu" to="." method="_on_PopupPanel_about_to_show"]
[connection signal="mouse_entered" from="ContextMenu/VBoxContainer/Play" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="ContextMenu/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="ContextMenu/VBoxContainer/Play" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="ContextMenu/VBoxContainer/Edit" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="ContextMenu/VBoxContainer/Edit" to="." method="_on_Edit_pressed"]
[connection signal="pressed" from="ContextMenu/VBoxContainer/Edit" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="ContextMenu/VBoxContainer/Rename" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="ContextMenu/VBoxContainer/Rename" to="." method="_on_Rename_pressed"]
[connection signal="pressed" from="ContextMenu/VBoxContainer/Rename" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="ContextMenu/VBoxContainer/ExportFile" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="ContextMenu/VBoxContainer/ExportFile" to="." method="_on_Export_pressed"]
[connection signal="pressed" from="ContextMenu/VBoxContainer/ExportText" to="." method="_on_ExportText_pressed"]
[connection signal="pressed" from="ContextMenu/VBoxContainer/ExportText" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="ContextMenu/VBoxContainer/Delete" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="ContextMenu/VBoxContainer/Delete" to="." method="_on_Delete_pressed"]
[connection signal="confirmed" from="DeleteConfirmationDialog" to="." method="_on_DeleteConfirmationDialog_confirmed"]
[connection signal="file_selected" from="ExportFileDialog" to="." method="_on_ExportFileDialog_file_selected"]
[connection signal="confirmed" from="RenameFileDialog" to="." method="_on_RenameFileDialog_confirmed"]
[connection signal="text_changed" from="RenameFileDialog/HBoxContainer2/LineEdit" to="RenameFileDialog" method="_on_LineEdit_text_changed"]
[connection signal="mouse_entered" from="CanvasLayer/Back" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Back" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Back" to="." method="_on_Back_pressed"]
[connection signal="mouse_entered" from="ExportTextDialog/VBoxContainer/HBoxContainer/CopyToClipboard" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="ExportTextDialog/VBoxContainer/HBoxContainer/CopyToClipboard" to="." method="_on_CopyToClipboard_pressed"]
[connection signal="pressed" from="ExportTextDialog/VBoxContainer/HBoxContainer/CopyToClipboard" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="ExportTextDialog/VBoxContainer/HBoxContainer/Close" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="ExportTextDialog/VBoxContainer/HBoxContainer/Close" to="." method="_on_ExportText_Close_pressed"]
[connection signal="pressed" from="ExportTextDialog/VBoxContainer/HBoxContainer/Close" to="." method="_on_button_pressed"]
[connection signal="level_imported" from="ImportDialog" to="." method="_on_ImportDialog_level_imported"]
